# ghub

./: .gitignore  CHANGELOG.md  CODE_REVIEW_ISSUES.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_PLAN.md  PLAN_CHANGES.md  README.md  SCANNING_ANALYSIS.md  backup_db.bat  build-portable.ps1  ddg_test.html  full_diff.txt  game_page_test.html  games_catalog.json  index.html  package-lock.json  package.json  plan.md  run_and_backup.sh  steam_search.html  tailwind.config.js  tech-comparison.md  technical-requirements.md  test_title_extraction.sh  vite.config.ts  требования.md
backups/: ghub_initial.db
plans/: FINAL-scanning-ui-simplification-plan.md  async-scanning-implementation.md  async-scanning-simple.md  logging-implementation-plan.md
src/: App.tsx  ErrorBoundary.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  meta_service.rs  models.rs  playtime.rs  scanner.rs  scanner_constants.rs  scanning_service.rs  title_extraction.rs
src-tauri/src/commands/: backup.rs  downloads.rs  filesystem.rs  games.rs  logging.rs  metadata.rs  mod.rs  playtime.rs  scanning.rs  settings.rs  spaces.rs
src-tauri/src/metadata/: aggregator.rs  itch.rs  mod.rs  steam.rs  strategy.rs  tests.rs
src/components/: AddLinkDialog.tsx  ContextMenu.tsx  (+16 more)
tasks/: local-game-data-retrieval-improvements.md  local-game-data-retrieval-plan.md  scanning-code-review.md  scanning-comparison-analysis.md  scanning-enhancements-todo.md  unit-tests-title-extraction.md
(+8 files in other folders)
