[package]
name = "ghub"
version = "0.1.0"
description = "Game library launcher"
authors = ["GHub"]
edition = "2021"

[lib]
name = "ghub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
regex = "1"
regex-lite = "0.1"
lazy_static = "1"
urlencoding = "2"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.22"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
lnk = "0.5"
fern = "0.6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Storage_FileSystem"
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
